hw04: kubernetes job,db,volumes,volumesClaim
